--- a/BlazorEmployee/Pages/_Host.cshtml
+++ b/BlazorEmployee/Pages/_Host.cshtml
@@ -16,7 +16,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/EmpRegister.css" rel="stylesheet" />
     <link href="css/HomeEmp.css" rel="stylesheet" />
-
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
